--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
     </head>
 
     <body>
-        <div id="like_button_container"></div>
+        <h2>Add react in one minute</h2>
+
+        <h2>This page demonstrates using React with no build tooling.</h2>
+        <p>React is loaded as script tag.</p>
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
+
+        <p>This is the first coment.
+        <div class="like_button_container" data-commentid="1"></div>
+        </p>
+        <p>
+            This is the second comment
+        <div class="like_button_container" data-commentid="2"></div>
+        </p>
+        <p>This is the third coment</p>
+        <div class="like_button_container" data-commentid="3"></div>
         <!-- Load our React component. -->
+
         <script src="like_button.js"></script>
     </body>
 
