--- a/hello_world/index.html
+++ b/hello_world/index.html
@@ -28,7 +28,7 @@
         <div class="like_button_container" data-commentid="3"></div>
         <!-- Load our React component. -->
 
-        <script src="like_button.js"></script>
+        <script src="like_button.min.js"></script>
     </body>
 
 </html>
