--- a/try jsx/index.html
+++ b/try jsx/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <div id="root"></div>
-        <script src="state.js" type="text/babel">
+        <script src="event.js" type="text/babel">
         </script>
     </body>
 
